[package]
name = "peaches"
version = "0.1.0"
description = "Agnostic UI library inspired by React"
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
